--- a/_system/_config.json
+++ b/_system/_config.json
@@ -18,7 +18,8 @@
             "order" : [
                 
                 "modernizr.js",
-                "jquery.js"
+                "jquery.js",
+                "jquery.jcarousel.min.js"
                 
 
             ],
